Fix bold fonts to now look blurry

--- a/src/fonts/font-face.css
+++ b/src/fonts/font-face.css
@@ -5,3 +5,11 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: "Berkeley Mono";
+  src: url("./BerkeleyMono-Bold.woff2") format("woff2");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
